# game_of_life_3D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
libraries/jhr/: jhr_skip_list.h
res/shaders/crosshairs/: fragment.glsl
res/shaders/default/: fragment.glsl
res/shaders/instance/: fragment.glsl  vertex.glsl
res/shaders/line/: fragment.glsl
src/: main.cpp  player.cpp  player.h  settings.h  window.cpp  window.h  world.cpp  world.h
src/camera/: camera.h
src/geometry/: box.cpp  box.h  rbox.cpp  rbox.h
src/render/: box_renderer.cpp  box_renderer.h  crosshairs.cpp  crosshairs.h  debug_crosshairs.cpp  debug_crosshairs.h  font_renderer.cpp  font_renderer.h  frame_renderer.cpp  frame_renderer.h  line.cpp  line.h  renderer.h
src/shader/: shader.cpp  shader.h
src/ui/: terminal.cpp  terminal.h
src/util/: raycasting.cpp  raycasting.h
